Fixed a couple of layout issues, changed some wording, added espresso project file

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -613,6 +613,7 @@ strong {
 
 section img {
   max-width: 100%;
+  margin: 20px;
 }
 
 blockquote {
@@ -789,7 +790,7 @@ section {
 section #title {
   border: 0;
   outline: none;
-  margin: 0 0 50px 0;
+  margin: 0 0 10px 0;
   padding: 0 0 5px 0;
 }
 section #title h1 {
